feat: Implement negative word counter and load lexicons
- Created 'get_neg' function, mirroring the logic of 'get_pos'.
- Implemented robust loading for both positive and negative word lists,
  correctly filtering out comments and empty lines.

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "f32aaa3b-d1b7-4d13-89fc-b5610284d2f7",
    "metadata": {},
    "outputs": [],
@@ -125,12 +125,27 @@
     "            count_positive += 1\n",
     "    return count_positive\n",
     "\n",
+    "def get_neg(sentence_txt: str) -> int:\n",
+    "    count_negative = 0\n",
+    "    words_in_txt = sentence_txt.lower().split()\n",
+    "\n",
+    "    for word in words_in_txt:\n",
+    "        clean_word = strip_punctuation(word)\n",
+    "        if clean_word in negative_words:\n",
+    "            count_negative += 1\n",
+    "    return count_negative\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "data = \"data\"\n",
     "file_name = \"positive_words.txt\"\n",
     "file_path = os.path.join(data, file_name)\n",
+    "file_name_negative = \"negative_words.txt\"\n",
+    "file_path_negative = os.path.join(data, file_name_negative)\n",
     "\n",
     "positive_words = []\n",
+    "negative_words = []\n",
     "\n",
     "try:\n",
     "\n",
@@ -138,6 +153,10 @@
     "        for line in file_in:\n",
     "            if line.strip() and not line.startswith(';'):\n",
     "                positive_words.append(line.strip())\n",
+    "    with open(file_path_negative, \"r\", encoding='UTF-8') as fil_neg_in:\n",
+    "        for line in fil_neg_in:\n",
+    "            if line.strip() and not line.startswith(\";\"):\n",
+    "                negative_words.append(line.strip())\n",
     "\n",
     "\n",
     "except FileNotFoundError:\n",
