docs: Create a comprehensive README for the sentiment analysis project
- Added a detailed project description, structure, and logic overview.
- Included a screenshot of the resulting data in Google Sheets.
- Embedded the final scatter plot visualizing the analysis.
- Wrote a detailed conclusion based on the visual analysis.

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f32aaa3b-d1b7-4d13-89fc-b5610284d2f7",
    "metadata": {},
    "outputs": [],
@@ -167,8 +167,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "916b0933-3f75-4eec-9426-82e689e8be83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import os\n",
+    "punctuation_chars = [\"'\", '\"', \",\", \".\", \"!\", \":\", \";\", '#', '@']\n",
+    "\n",
+    "def strip_punctuation(word: str) -> str:\n",
+    "    clean_word = word\n",
+    "\n",
+    "    for punc in punctuation_chars:\n",
+    "        clean_word = clean_word.replace(punc, \"\")\n",
+    "    return clean_word\n",
+    "\n",
+    "\n",
+    "def get_pos(sentence_text: str) -> int:\n",
+    "\n",
+    "    count_positive =  0\n",
+    "    words_in_sentence = sentence_text.lower().split()\n",
+    "    for word in words_in_sentence:\n",
+    "        clean_word = strip_punctuation(word)\n",
+    "        if clean_word in positive_words:\n",
+    "            count_positive += 1\n",
+    "    return count_positive\n",
+    "\n",
+    "def get_neg(sentence_txt: str) -> int:\n",
+    "    count_negative = 0\n",
+    "    words_in_txt = sentence_txt.lower().split()\n",
+    "\n",
+    "    for word in words_in_txt:\n",
+    "        clean_word = strip_punctuation(word)\n",
+    "        if clean_word in negative_words:\n",
+    "            count_negative += 1\n",
+    "    return count_negative\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "data = \"data\"\n",
+    "file_name = \"positive_words.txt\"\n",
+    "file_path = os.path.join(data, file_name)\n",
+    "\n",
+    "file_name_negative = \"negative_words.txt\"\n",
+    "file_path_negative = os.path.join(data, file_name_negative)\n",
+    "\n",
+    "file_twitter_data = \"project_twitter_data.csv\"\n",
+    "twitter_path = os.path.join(data, file_twitter_data)\n",
+    "\n",
+    "output_file_name = \"resulting_data.csv\"\n",
+    "output_path = os.path.join(data, output_file_name)\n",
+    "\n",
+    "positive_words = []\n",
+    "negative_words = []\n",
+    "\n",
+    "try:\n",
+    "\n",
+    "    with open(file_path, \"r\", encoding='UTF-8') as file_in:\n",
+    "        for line in file_in:\n",
+    "            if line.strip() and not line.startswith(';'):\n",
+    "                positive_words.append(line.strip())\n",
+    "    with open(file_path_negative, \"r\", encoding='UTF-8') as fil_neg_in:\n",
+    "        for line in fil_neg_in:\n",
+    "            if line.strip() and not line.startswith(\";\"):\n",
+    "                negative_words.append(line.strip())\n",
+    "    with open(twitter_path, \"r\", encoding='UTF-8') as file_twitter_in:\n",
+    "        csv_reader = csv.reader(file_twitter_in)\n",
+    "        header = next(csv_reader)\n",
+    "        twitter_data_list = list(csv_reader)\n",
+    "        with open(output_path, \"w\", encoding='UTF-8') as file_out:\n",
+    "\n",
+    "            header_out = \"Number of Retweets,Number of Replies,Positive Score,Negative Score,Net Score\\n\"\n",
+    "            file_out.write(header_out)\n",
+    "\n",
+    "            for tweet_row in twitter_data_list:\n",
+    "                tweet_txt = tweet_row[0]\n",
+    "                retweet_count = tweet_row[1]\n",
+    "                replay_count = tweet_row[2]\n",
+    "\n",
+    "                positive_score = get_pos(tweet_txt)\n",
+    "                negative_score = get_neg(tweet_txt)\n",
+    "                net_score = positive_score - negative_score\n",
+    "\n",
+    "                tweet_new_file_data = [retweet_count, replay_count, str(positive_score), str(negative_score), str(net_score)]\n",
+    "                new_line = \",\".join(tweet_new_file_data)\n",
+    "\n",
+    "                file_out.write(new_line + \"\\n\")\n",
+    "\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"ERROR: A required file was not found.\")\n",
+    "    print(f\"Details: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00ee335a-7f36-4998-b495-c8b05cc35b92",
    "metadata": {},
    "outputs": [],
    "source": []
